[package]
name = "actox"
version = "0.2.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "FIXME"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/actox-rust"
readme = "README.md"


[badges]
appveyor = { repository = "KizzyCode/actox-rust" }


[features]
default = []


[dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
